# ansh_finance.github.io

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup_project.py
.github/workflows/: pages-deploy.yml
config/: settings.py  urls.py
docs/: README.md  api-reference.html  architecture.html  index.html  run-locally.html  styles.css
finance/: dashboard_urls.py  filters.py  models.py  record_urls.py  serializers.py  views.py
finance/migrations/: 0001_initial.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_financial.py  test_users.py
users/: apps.py  models.py  permissions.py  serializers.py  urls.py  user_urls.py  views.py
users/migrations/: 0001_initial.py
